# moca

./: .gitignore  README.md  setup.cfg
.github/workflows/: unittests.yml
examples/: README.md  demonstrate_subset_selection.py  simulate_corr_group_size.py
examples/sim_results/: sim_pars.json
moca/: __init__.py  classifiers.py  cross_validate.py  simulate.py  stats.py
test/: test_classifier_base_classifier.py  test_classifier_bestbc.py  test_classifiers.py  test_cross_validate.py  test_moca_abc.py  test_simulator.py  test_smoca.py  test_stats.py  test_umoca.py  test_woc.py
