[metadata]
name = moca
version = 0.0.1dev
description = moca: a method for optimal combination of binary classifiers.
long_description = file: README.md
license = Apache License 2.0
author = Robert Vogel and Mehmet Eren Ahsen


[options]
packages = 
    moca
python_requires = >= 3.5
install_requires = 
    numpy >= 1.14.0
    scipy >= 1.0.0
    matplotlib >= 2.2.0

