[metadata]
name = moca
version = attr: moca.__version__
description = moca: a method for optimal combination of binary classifiers.
long_description = file: README.md
license = Apache License 2.0
author = Robert Vogel and Mehmet Eren Ahsen


[options]
packages = 
    moca
python_requires = >= 3.10
install_requires = 
    numpy >= 1.26.3
    scipy >= 1.12.0
    matplotlib >= 3.8.0

